@@ -17,6 +17,7 @@ Other fixes:
  - Qt: Fix crash when switching from high-resolution OpenGL renderer to software
  - Qt: Fix OpenGL renderer lagging behind when fast-forwarding (fixes mgba.io/i/2094)
  - Qt: Fix smudged window icon on Windows
+ - Qt: Fix saving settings enabling camera when camera name changes (fixes mgba.io/i/2125)
 Misc:
  - Core: Truncate preloading ROMs that slightly exceed max size (fixes mgba.io/i/2093)
  - GBA: Default-enable VBA bug compat for Ruby and Emerald ROM hacks
